--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-owl-carousel": "^2.3.3",
+    "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "react-typed": "^1.2.0",
     "swiper": "^9.3.2",
