--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "5.0.1",
     "react-typed": "^1.2.0",
     "swiper": "^9.3.2",
+    "typed.js": "^2.0.16",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
